# WebUntisExporter

./: .gitignore  README.md  main.py  setup.cfg  timetable.db  timetable.db-journal  webuntis.db
GUI/: gui.py
WUExport/: __init__.py  database.py  main.py  webuntis_handler.py
databank/: __init__.py  base.py  databank.db  tables.py  teacher.py
databank/flowchart/: model.drawio
databank/model/: __init__.py  absences.py  base_model.py  model.py  subjects.py  teachers.py  timetable.py  todos.py  users.py
errors/: __init__.py  path_error.py
model/: model.py
modules/: __init__.py
modules/WUExport/: __init__.py  webuntis_handler.py
modules/databank/: __init__.py  databank.db
modules/databank/model/: absences.py  base_model.py  models.py  subjects.py  teachers.py  timetable.py  todos.py  users.py
modules/errors/: __init__.py
script/: beispiel.py  test.py
tests/: test_db_teacher.py  test_webuntis_handler.py  testbase.db
tests/test_databank/: test_absences_02.py  test_base_model_01.py  test_import_00.py  test_subjects_03.py  test_teachers_04.py  test_timetable_05.py
toolbox/: __init__.py  delete_filepath.py  dump_teacher.py  json_to_dictionary.py  teacher_id_name.json
userstories/: 00_userstory.md  01_userstory.md  02_userstory.md  03_userstory.md  05_userstory.md
